[gd_scene load_steps=14 format=2]

[ext_resource path="res://Inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://styles/MenuButton_HoverFocus.tres" type="StyleBox" id=2]
[ext_resource path="res://styles/MenuButton_Focus.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/MenuButton_Normal.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/MenuButton_Pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://styles/dialogPanel.tres" type="StyleBox" id=6]
[ext_resource path="res://styles/MenuButton_Disabled.tres" type="StyleBox" id=7]
[ext_resource path="res://styles/dialogButtonPanel.tres" type="StyleBox" id=8]
[ext_resource path="res://name_generation/UITitleFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://scenes/background space dust.tscn" type="PackedScene" id=10]
[ext_resource path="res://Inventory/ItemListUI.gd" type="Script" id=11]
[ext_resource path="res://GameNarrativeDisplay/GamepadHint.tscn" type="PackedScene" id=12]
[ext_resource path="res://GameNarrativeDisplay/BlurBackground.tscn" type="PackedScene" id=13]

[node name="Control" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="Nebula" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 175, 810 )
scale = Vector2( 6, 6 )

[node name="ColorRect" parent="Nebula" index="3"]
visible = false

[node name="BlurBackground" parent="." instance=ExtResource( 13 )]

[node name="InventoryUI" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -360.0
margin_right = 320.0
margin_bottom = 360.0
custom_constants/separation = 0
alignment = 1

[node name="CargoContainer" type="PanelContainer" parent="InventoryUI"]
margin_top = 86.0
margin_right = 640.0
margin_bottom = 526.0
custom_styles/panel = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryUI/CargoContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 420.0

[node name="ContainerName" type="Label" parent="InventoryUI/CargoContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 9 )
text = "CARGO MANIFEST"
valign = 2

[node name="HSeparator" type="HSeparator" parent="InventoryUI/CargoContainer/VBoxContainer"]
self_modulate = Color( 1, 0.847059, 0.545098, 1 )
margin_top = 42.0
margin_right = 600.0
margin_bottom = 46.0

[node name="ContainerDescription" type="RichTextLabel" parent="InventoryUI/CargoContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 80.0
bbcode_enabled = true
bbcode_text = "The contents of the ship's cargo bays.
"
text = "The contents of the ship's cargo bays.
"
fit_content_height = true

[node name="Spacer" type="Control" parent="InventoryUI/CargoContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 600.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 12 )

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryUI/CargoContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 600.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="ItemList" type="VBoxContainer" parent="InventoryUI/CargoContainer/VBoxContainer/ScrollContainer"]
margin_right = 600.0
size_flags_horizontal = 3
custom_constants/separation = 10
script = ExtResource( 11 )

[node name="ButtonContainer" type="PanelContainer" parent="InventoryUI"]
margin_top = 526.0
margin_right = 640.0
margin_bottom = 598.0
custom_styles/panel = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryUI/ButtonContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 52.0
custom_constants/separation = 15
alignment = 1

[node name="AddItem" type="Button" parent="InventoryUI/ButtonContainer/HBoxContainer"]
visible = false
margin_left = 93.0
margin_right = 221.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "ADD ITEMS"

[node name="Discard" type="Button" parent="InventoryUI/ButtonContainer/HBoxContainer"]
visible = false
margin_left = 164.0
margin_right = 292.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "DISCARD ALL"

[node name="Done" type="Button" parent="InventoryUI/ButtonContainer/HBoxContainer"]
margin_left = 236.0
margin_right = 364.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "DONE"

[node name="Spacer" type="Control" parent="InventoryUI"]
margin_top = 598.0
margin_right = 640.0
margin_bottom = 610.0
rect_min_size = Vector2( 0, 12 )

[node name="GamepadHint" parent="InventoryUI" instance=ExtResource( 12 )]
margin_left = 0.0
margin_top = 610.0
margin_right = 640.0
margin_bottom = 634.0

[connection signal="pressed" from="InventoryUI/ButtonContainer/HBoxContainer/AddItem" to="." method="_on_AddItem_pressed"]
[connection signal="pressed" from="InventoryUI/ButtonContainer/HBoxContainer/Discard" to="." method="_on_Discard_pressed"]
[connection signal="pressed" from="InventoryUI/ButtonContainer/HBoxContainer/Done" to="." method="_on_Done_pressed"]

[editable path="Nebula"]
